--- a/index.html
+++ b/index.html
@@ -4,8 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CALC</title>
+    <link rel="stylesheet" href="Calc.css">
 </head>
 <body>
-    Calc
+  <main>
+      <section class="logo">
+        <div class="left">
+            CASIO
+        </div>
+        <div class="right">
+            SL-310UC
+        </div>
+      </section>
+      <section class="display">
+        <div class="lcd">
+            1234567890.
+        </div>
+      </section>
+      <section class="button">
+          <button class="btn">1</button>
+          <button class="btn">2</button>
+          <button class="btn">3</button>
+          <button class="btn">4</button>
+          <button class="btn">5</button>
+          <button class="btn">6</button>
+          <button class="btn">7</button>
+          <button class="btn">8</button>
+          <button class="btn">9</button>
+          <button class="btn">10</button>
+          <button class="btn">11</button>
+          <button class="btn">12</button>
+          <button class="btn">13</button>
+          <button class="btn">14</button>
+          <button class="btn">15</button>
+          <button class="btn">16</button>
+          <button class="btn">17</button>
+          <button class="btn">18</button>
+          <button class="btn">19</button>
+          <button class="btn">20</button>
+          <button class="btn">21</button>
+          <button class="btn">22</button>
+          <button class="btn">23</button>
+          <button class="btn">24</button>
+          <button class="btn">25</button>
+          <button class="btn">26</button>
+          <button class="btn">27</button>
+          <button class="btn">28</button>
+          <button class="btn">29</button>
+      </section>
+  </main>  
 </body>
 </html>
