--- a/index.html
+++ b/index.html
@@ -13,41 +13,45 @@
           CASIO
         </div>
         <div class="right">
-          <div class="solar"></div>
+          <div class="solar" id="solar"></div>
           SL-310UC
         </div>
       </section>
       <section class="display">
-        <div class="lcd">
-          1234567890.
-        </div>
+        <div class="lcd" id="lcd">hola amigo</div>
       </section>
       <section class="buttons">
         <button class="btn">MC</button>
         <button class="btn">MR</button>
         <button class="btn">M-</button>
         <button class="btn">M+</button>
-        <button class="btn">/</button>
-        <button class="btn">+/-</button>
+        <button class="btn">÷</button>
+
+        <button class="btn">⁺∕₋</button>
         <button class="btn">7</button>
         <button class="btn">8</button>
         <button class="btn">9</button>
-        <button class="btn">X</button>
-        <button class="btn">></button>
+        <button class="btn">×</button>
+
+        <button class="btn">▸</button>
         <button class="btn">4</button>
         <button class="btn">5</button>
         <button class="btn">6</button>
         <button class="btn">-</button>
+
         <button class="btn">C</button>
         <button class="btn">1</button>
         <button class="btn">2</button>
         <button class="btn">3</button>
+        <button class="btn">+</button>
+
         <button class="btn">AC</button>
         <button class="btn">0</button>
-        <button class="btn">.</button>
-        <button class="btn">:</button>
-        <button class="btn">+</button>
+        <button class="btn">·</button>
+        <button class="btn">=</button>
       </section>
     </main>
+    <audio id="sound" src="key.mp3"></audio>
+    <script src="main.js"></script>
   </body>
 </html>
