--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="btn">M+</button>
         <button class="btn">÷</button>
 
-        <button class="btn">⁺∕₋</button>
+        <button class="btn">±</button>
         <button class="btn">7</button>
         <button class="btn">8</button>
         <button class="btn">9</button>
