--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CALCULADORA CASIO</title>
     <link rel="stylesheet" href="Calc.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <main>
@@ -53,5 +55,16 @@
     </main>
     <audio id="sound" src="key.mp3"></audio>
     <script src="main.js"></script>
+    <script>
+      // Register a service worker hosted at the root of the
+      if ("serviceWorker" in navigator) {
+        // site using the default scope.
+        navigator.serviceWorker
+          .register("./sw.js")
+          .then(function (registration) {
+            console.log("Service worker registration succeeded:", registration);
+          });
+      }
+    </script>
   </body>
 </html>
