--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CALCULADORA CASIO</title>
-    <link rel="stylesheet" href="Calc.css" />
+    <link rel="stylesheet" href="calc.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="manifest.json" />
   </head>
