--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </div>
       </section>
       <section class="display">
-        <div class="lcd" id="lcd">hola amigo</div>
+        <div class="lcd" id="lcd">¡hola!</div>
       </section>
       <section class="buttons">
-        <button class="btn">MC</button>
-        <button class="btn">MR</button>
-        <button class="btn">M-</button>
-        <button class="btn">M+</button>
+        <button class="btn">(</button>
+        <button class="btn">)</button>
+        <button class="btn"></button>
+        <button class="btn"></button>
         <button class="btn">÷</button>
 
         <button class="btn">±</button>
