--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       // Register a service worker hosted at the root of the
       if ("serviceWorker" in navigator) {
         // site using the default scope.
-        navigator.serviceWorker.register("./sw.js");
+        // navigator.serviceWorker.register("./sw.js");
         // .then(function (registration) {
         //   console.log("Service worker registration succeeded:", registration);
         // });
