Logo y Raíz cuadrada

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <section class="logo">
         <div class="left">
-          CASIO
+          <img src="logo.svg" alt="CASIO" />
         </div>
         <div class="right">
           <div class="solar" id="solar"></div>
@@ -25,7 +25,7 @@
       <section class="buttons">
         <button class="btn">(</button>
         <button class="btn">)</button>
-        <button class="btn"></button>
+        <button class="btn">√</button>
         <button class="btn"></button>
         <button class="btn">÷</button>
 
