--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
     <script>
       // Register a service worker hosted at the root of the
       if ("serviceWorker" in navigator) {
-        // site using the default scope.
-        // navigator.serviceWorker.register("./sw.js");
-        // .then(function (registration) {
-        //   console.log("Service worker registration succeeded:", registration);
-        // });
+         navigator.serviceWorker.register("./sw.js");
+         .then(function (registration) {
+           console.log("Service worker registration succeeded:", registration);
+        });
       }
     </script>
   </body>
