--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <script>
       // Register a service worker hosted at the root of the
       if ("serviceWorker" in navigator) {
-         navigator.serviceWorker.register("./sw.js");
-         .then(function (registration) {
-           console.log("Service worker registration succeeded:", registration);
-        });
+         navigator.serviceWorker.register("./sw.js")
+           .then(function (registration) {
+              console.log("Service worker registration succeeded:", registration);
+           });
       }
     </script>
   </body>
