remove 0 from start

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
       </section>
       <section class="display">
-        <div class="lcd" id="lcd">0</div>
+        <div class="lcd" id="lcd"></div>
       </section>
       <section class="buttons">
         <button class="btn">(</button>
